# simple-node-state-machine

./: AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  NodeStateMachine.c  NodeStateMachine.cpp  README  configure.ac  dbus_api.hpp  org.genivi.SimpleNodeStateMachine.conf  org.genivi.SimpleNodeStateMachine.xml
src/: simplenodestatemachine.cpp  simplenodestatemachine.h
